--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 #root {
-    max-width: 1280px;
+    max-width: 1440px;
     margin: 0 auto;
-    padding: 2rem 0;
+    padding: 1rem 0;
     text-align: center;
 }
 
@@ -9,16 +9,19 @@
     gap: 0.5rem;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .card {
-    min-width: 20rem;
     background-color: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(5px);
     padding: 1rem;
     display: grid;
-    grid-auto-rows: 2fr auto 3fr;
+    grid-auto-rows: 1fr auto 2fr;
+
+    h3 {
+        padding-bottom: 0.5rem;
+    }
 
     li {
         text-align: left;
@@ -43,6 +46,11 @@
     &--answer {
         display: flex;
         justify-content: center;
+    }
+
+    &--correct {
+        grid-auto-rows: 1fr;
+        place-items: center;
     }
 }
 
@@ -89,7 +97,13 @@
 button {
     position: fixed;
     left: 2rem;
+
+    &:nth-of-type(2) {
+        top: 3rem
+    }
 }
 
-
+h3 {
+    margin: 0;
+}
 
