--- a/src/App.scss
+++ b/src/App.scss
@@ -1,109 +1,171 @@
 #root {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 1rem 0;
-    text-align: center;
+  max-width: 1440px;
+  margin: 0 auto;
+  text-align: center;
+  height: 100%;
 }
 
+body {
+  margin: 0;
+  height: 100vh;
+}
+
+$gap: 1rem;
 .wrapper {
-    gap: 0.5rem;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: $gap;
+  padding: $gap;
+  height: calc(100% - #{$gap} - #{$gap});
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .card {
-    background-color: rgba(0, 0, 0, 0.9);
+  display: grid;
+  grid-auto-rows: 1fr auto 2fr;
+  border-radius: 1rem;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(5px);
-    padding: 1rem;
-    display: grid;
-    grid-auto-rows: 1fr auto 2fr;
+    transition: all 300ms ease-in-out;
+  }
 
-    h3 {
-        padding-bottom: 0.5rem;
+  &--noBlur {
+    //li {
+    //  transition: all 300ms ease-in-out;
+    //  opacity: 0;
+    //}
+
+    &::before {
+      background-color: rgba(0, 0, 0, 0);
+      backdrop-filter: blur(0px);
     }
+  }
 
-    li {
-        text-align: left;
+  .question {
+    z-index: 5;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    padding: 0.5rem 1rem;
+  }
+
+  h3 {
+    padding-bottom: 0.5rem;
+    z-index: 5;
+  }
+
+  li {
+    position: relative;
+    z-index: 5;
+    text-align: left;
+  }
+
+  input {
+    z-index: 5;
+    border-radius: 20rem;
+    background-color: transparent;
+    box-shadow: none;
+    border: 1px solid #343434;
+    padding: 0.5rem 1rem;
+
+    &:active, &:focus-within {
+      outline: 1px solid #252525;;
     }
+  }
 
-    input {
-        background-color: transparent;
-        box-shadow: none;
-        border: 1px solid #252525;
-        padding: 0.5rem 1rem;
+  .input--correct {
+    border-color: #4da419;
+  }
 
-        &:active, &:focus-within {
-            outline: 1px solid #252525;;
-        }
-    }
+  .input--wrong {
+  }
 
-    .input--correct {
-        border-color: #4da419;
-    }
-    .input--wrong {}
+  .answer {
+    display: flex;
+    justify-content: center;
+    color: #fac031;
+  }
 
-    &--answer {
-        display: flex;
-        justify-content: center;
-    }
+  input, .answer {
+    margin: 0.25rem 1rem;
+  }
 
-    &--correct {
-        grid-auto-rows: 1fr;
-        place-items: center;
-    }
+  &--correct {
+    grid-auto-rows: 1fr;
+    place-items: center;
+  }
 }
 
 .background {
-    position: fixed;
-    z-index: -1;
+  position: fixed;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+
+  &::before {
+    content: '';
+    background-color: rgba(0, 0, 0, 0.85);
+    backdrop-filter: blur(10px);
+    position: absolute;
     left: 0;
     top: 0;
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    place-items: center;
+    width: 100%;
+    height: 100%;
+    transition: all 300ms ease-in-out;
+  }
 
+  &--removeBlur {
     &::before {
-        content: '';
-        background-color: rgba(0, 0, 0, 0.85);
-        backdrop-filter: blur(10px);
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        transition: all 300ms ease-in-out;
+      background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(0);
     }
-
-    &--removeBlur {
-        &::before {
-            background-color: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(0);
-        }
-    }
+  }
 }
 
-.answer {
-    position: relative;
-    z-index: 5;
-    color: white;
-    font-size: 10rem;
-    letter-spacing: 0.1rem;
-    margin-bottom: 5rem;
-    display: flex;
+.finalAnswer {
+  position: relative;
+  z-index: 5;
+  color: white;
+  font-size: 10rem;
+  letter-spacing: 0.1rem;
+  margin-bottom: 5rem;
+  display: flex;
+
+  * {
+    color: #fac031;
+  }
 }
 
 button {
-    position: fixed;
-    left: 2rem;
+  position: fixed;
+  left: 2rem;
 
-    &:nth-of-type(2) {
-        top: 3rem
-    }
+  &:nth-of-type(2) {
+    top: 3rem
+  }
 }
 
 h3 {
-    margin: 0;
+  margin: 0;
+}
+
+.spline {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  padding-top: 50vh;
 }
 
