--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,21 @@ $gap: 1rem;
     }
   }
 
+  &__image {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  &:hover {
+    .card__image {
+      transform: scale(1.2);
+    }
+  }
+
   .question {
     z-index: 5;
     display: flex;
@@ -81,13 +96,6 @@ $gap: 1rem;
     }
   }
 
-  .input--correct {
-    border-color: #4da419;
-  }
-
-  .input--wrong {
-  }
-
   .answer {
     display: flex;
     justify-content: center;
@@ -96,11 +104,6 @@ $gap: 1rem;
 
   input, .answer {
     margin: 0.25rem 1rem;
-  }
-
-  &--correct {
-    grid-auto-rows: 1fr;
-    place-items: center;
   }
 }
 
@@ -113,25 +116,6 @@ $gap: 1rem;
   height: 100vh;
   display: grid;
   place-items: center;
-
-  &::before {
-    content: '';
-    background-color: rgba(0, 0, 0, 0.85);
-    backdrop-filter: blur(10px);
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    transition: all 300ms ease-in-out;
-  }
-
-  &--removeBlur {
-    &::before {
-      background-color: rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(0);
-    }
-  }
 }
 
 .finalAnswer {
